fixed all mobile overflows

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -230,6 +230,7 @@ body{
 .articles-screen{
   background-color: $articlesBgColor;
   padding: 88px 0 48px;
+  overflow: hidden;
 }
 .article-slider{
   max-width: 955px;
@@ -623,6 +624,10 @@ body{
   .trigger-img{
     order: 3;
     margin: 32px 0 0;
+    img{
+      width: 100%;
+      margin-left:0;
+    }
   }
   .trigger-header{
     display: block;
